<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:background="#EDE8E8"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp"
    android:paddingBottom="20dp">

    <Switch
        android:id="@+id/visual_cue_switch"
        style="@style/settings_option"
        android:contentDescription="@string/visual_cue"
        android:text="@string/visual_cue"
        android:typeface="sans"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/visual_descrip"
        style="@style/option_descriptor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/visual_cue_switch"
        android:text="@string/visual_description" />

    <Switch
        android:id="@+id/sound_cue_switch"
        style="@style/settings_option"
        android:checked="true"
        android:contentDescription="@string/sound_cue"
        android:text="@string/sound_cue"
        android:textStyle="normal"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/sound_descrip"
        style="@style/option_descriptor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/sound_cue_switch"
        android:text="@string/sound_description"
        android:textColor="#5C5959" />

    <Switch
        android:id="@+id/voice_cue_switch"
        style="@style/settings_option"
        android:contentDescription="@string/voice_cue"
        android:text="@string/voice_cue"
        android:textStyle="normal"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/voice_descrip"
        style="@style/option_descriptor"
        android:labelFor="@id/voice_cue_switch"
        android:text="@string/voice_announcement_description"
        android:textColor="#5C5959" />

    <Switch
        android:id="@+id/vibration_switch"
        style="@style/settings_option"
        android:layout_height="48dp"
        android:checked="true"
        android:contentDescription="@string/vibration_cue"
        android:padding="10dp"
        android:text="@string/vibration_cue"
        android:textColor="@android:color/black"
        android:typeface="sans"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/vibration_descrip"
        style="@style/option_descriptor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/vibration_switch"
        android:paddingBottom="10dp"
        android:text="@string/vibration_description" />

    <TextView
        android:id="@+id/app_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/language"
        android:textColor="#2B2B2B"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_option"
        android:contentDescription="@string/language_spinner_description" />
</LinearLayout>